--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,6 @@ anyhow = "1.0.86"
 chrono = "0.4.38"
 thiserror = "2.0.12"
 tui-input = "0.8.0" # Example for text input handling
+tracing = "0.1.41"
+tokio = "1.46.1"
 # rustyline = "14.0.0" # Example for input prompts
